# GitPod_Python

./: .gitignore  3DLUT2DLUT.py  LiDar.py  Nonlinear_fitting.py  Pngtrans.py  PowerShell-ssh_cmd_serial.ps1  Qvertical.py  Qvertical2.py  change_png_alpha.py  colorbar.py  concat.py  createLUT.py  cropImg.py  cube2png.py  delaunay triangulation.py  githubCrawler.py  green_matting.py  imageIsight.py  md2word.py  output.csv  png2ipg.py  sharpen.py  tickalpha.py  track_opencv.py  word2md.py
Crawler/: GetAccessToken.py  getJoke.py  githubCrawler.py
Depth-Anything-V2-with-OpenGLBokeh-ONNX/: README.md  dynamo.py  mainRenderLUT.py
Depth-Anything-V2-with-OpenGLBokeh-ONNX/libfacedetection/: __init__.py  (+2 more)
EyeProtection/: mainWindow.py  mySerial.py  myUsb.py
ImageQualityEvaluation/: README.docx  README.md  Rgb2CIELab.py  YCbCrCalculate.py  adjustHSL.py  main.py  md2word.py  skinSeg.py
LUT/: createLUT.py  cube2png.py  png2cube.py
OpenCL_VS2019/: PropertySheet.props
githubCrawler/: getJoke.py  main.py  test.py
openGLPython/: delaunayTriangulation_landmarks.py.py  mainRender.py  mainRenderErosion.py  mainRenderEyes.py  mainRenderFace.py  mainRenderGaussian.py  mainRenderGreen.py  mainRenderLUT.py  mainRenderLip.py  mainRenderTestGLSL.py  requirements.txt  testgaussian.py  磨皮.py
skinMaskProcess/: main.py  readme.md  skinSeg.py
srcfile/: LinuxC与C++开发实践.docx
test_cmakeLib/: CMakeLists.txt
test_cmakeLib/include/: hi.h
test_cmakeLib/src/: hello.cpp  hi.cpp
test_cmakeLib/use_lib/: CMakeLists.txt  use_lib.cpp
vit-pytorch/: README.md  main_test.py  setup.py  test.py
(+122 files in other folders)
